--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <style>
         table{
             width: 100vw;
-            height: 500px;
+        }
+        tr{
+            width: 100%;
+            height: 50px;
         }
         th{
             background-color: grey;
@@ -21,6 +24,10 @@
 </head>
 <body>
     <h1>Courses at the College</h1>
+    <form>
+        <input type="text" name="" id="searchField">
+        <input type="button" value="search" id="searchButton">
+    </form>
     <div class="container">
         <table border="1" class ="products">
             
